syntax = "proto3";

option csharp_namespace = "ShopApp.Product";

package product;

service Product {
  rpc Create (CreateRequest) returns (CreateReply);
  rpc List (ListRequest) returns (ListReply);
}


message ListRequest {

}
message ListReply{
    repeated ProductItem items = 1;
}

message ProductItem {
    string id = 1;
    string name = 2;
}


message CreateRequest {
  string name = 1;
}

message CreateReply {
  string id = 1;
}
